Mobile overflow fix

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -61,7 +61,9 @@
 }
 
 /* About Me */
-
+.aboutSection {
+	padding-top: 30px;
+}
 .aboutContainer {
 	display: grid;
 	gap: 40px;
@@ -69,8 +71,10 @@
 
 .aboutHeader {
 	display: flex;
+	flex-wrap: wrap;
 	gap: 5px;
 	align-items: center;
+	margin-bottom: 20px;
 	height: 40px;
 	grid-column: 1/-1;
 }
@@ -124,9 +128,10 @@
 	margin-top: 30px;
 }
 .aboutContainer figure img {
+	/* display: none; */
 	height: 100%;
-	width: -moz-fit-content;
-	width: fit-content;
+
+	width: 100%;
 	margin: 0 auto;
 	position: relative;
 	z-index: 2;
@@ -152,12 +157,11 @@
 	max-width: 338px;
 	width: 100%;
 	height: 100%;
-	/* inset: 0; */
 	margin: 0 auto;
 	border: 2px solid var(--accent);
 	border-radius: 5px;
 	top: 20px;
-	left: 20px;
+	left: max(10px, 1vw);
 	position: absolute;
 }
 
